[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
rustyline = { version = "15.0.0", default-features = true, features = ["derive"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

