[package]
name = "grain_core"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7"
bytemuck = "1.23.1"
crossbeam-skiplist = "0.1.3"
either = { workspace = true }
grain_macros = { workspace = true }
grain_parser = { workspace = true }
intrusive-collections = "0.9.7"
libc = { version = "0.2.172" }
pack1 = { version = "1.0.0", features = ["bytemuck"] }
parking_lot = { workspace = true }
rustc-hash = "2.0"
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
twox-hash = "2.1.1"
uncased = "0.9.10"
